objects/Residential_Project__c.object
<CustomObject>
    <fields>
        <fullName>Rebate_Reservation_Expiry_Date_lot__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs</description>
        <label>Rebate Reservation Expiry Date (lot)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs</description>
        <formula>TEXT(Community__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Date__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs
Requested Date populated manually</description>
        <label>Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requested_Delivery_Date__c</fullName>
        <label>Requested Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Roof_1_Pitch__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs</description>
        <label>Roof 1 Pitch</label>
        <picklist>
            <picklistValues>
                <fullName>Flat (180)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:12(5)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:12(9)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:12(14)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:12(18)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:12(23)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:12(27)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:12(30)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:12(34)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:12(37)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:12(40)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:12(43)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:12(45)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater than 12:12(45)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Roof_1_System_Orientation__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs</description>
        <label>Roof 1 System Orientation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Roof_2_Pitch__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs</description>
        <label>Roof 2 Pitch</label>
        <picklist>
            <picklistValues>
                <fullName>Flat (180)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:12(5)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:12(9)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:12(14)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:12(18)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:12(23)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:12(27)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:12(30)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:12(34)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:12(37)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:12(40)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:12(43)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:12(45)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater than 12:12(45)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Roof_2_System_Orientation__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs</description>
        <label>Roof 2 System Orientation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Roof_3_Pitch__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs</description>
        <label>Roof 3 Pitch</label>
        <picklist>
            <picklistValues>
                <fullName>Flat (180)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:12(5)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:12(9)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:12(14)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:12(18)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:12(23)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:12(27)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:12(30)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:12(34)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:12(37)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:12(40)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:12(43)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:12(45)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater than 12:12(45)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Roof_3_System_Orientation__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs</description>
        <label>Roof 3 System Orientation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Roof_Age__c</fullName>
        <description>Field is no longer needed and should be removed from object</description>
        <label>Roof Age</label>
        <picklist>
            <picklistValues>
                <fullName>0-5 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-10 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-15 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15-20 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20+ Years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Roof_Attachment__c</fullName>
        <label>Roof Attachment</label>
        <picklist>
            <picklistValues>
                <fullName>FLASHING, SMART MOUNT, BASE, 12&quot; x 18&quot;, BLK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L-Foot Kit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mounting Item, SPR-MC-BLK, SPR Comp Middle, Black (10 per box) (1508-434)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over Tile - QuickHook (Standard Height)</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>QuickHook (Low Height)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QuickHook (Standard Height)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S5 Mini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPACER,ARRAY EDGE,(UNIVERSAL)(1507-031)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stanchion - 7 Inch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stanchion - Other Heights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunModo - Deck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunModo - Rafter</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Roof_Type__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs</description>
        <label>Roof Type</label>
        <picklist>
            <picklistValues>
                <fullName>Flat Tile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S-Tile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Composite Shingle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metal Roof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rough_Labor_Pricing__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs</description>
        <label>Rough Labor Pricing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rough_Wire_Promised__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs</description>
        <label>Rough Wire Promised</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rough_Wire_WO_Date_Receipt__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs</description>
        <label>Rough Wire WO Date Receipt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rough_Wire_WO_Value__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs</description>
        <label>Rough Wire WO $ Value</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rough_Wire_WO__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs</description>
        <label>Rough Wire WO #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPWR_Deal_Type__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This formula field is automatically populated at record creation and is used to communicate to the project team the financial product associated with the particular project. The team uses this information to inform additional project tasks that may be associated with a particular financial product type.</description>
        <formula>TEXT(Quote__r.QuoteType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SPWR Deal Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Number__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This text entry field is manually populated by Partner Support Representatives (PSRs) and is used to provide a sales order number reference for the operations team.</description>
        <label>Sales Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_AHJ_Inspection__c</fullName>
        <description>Field to find the scheduled inspection date for a given project centrally located on the project record.  Users can plan for their inspections related and post inspection work on projects.</description>
        <label>Scheduled AHJ Inspection</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scheduled_Arrival_Date__c</fullName>
        <description>Requested by New Homes. Ordering #149608871</description>
        <label>Scheduled Arrival Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scheduled_Site_Survey_Date__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This date field is manually populated by the EC or Project Coordinator at the time that on of these two project roles schedules a site survey with the homeowner.</description>
        <label>Scheduled Site Survey Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Secondary_Contact_Email__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This formula field is automatically populated from the opportunity record upon project record creation.</description>
        <formula>Secondary_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Contact_Method__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This is a formula field linked to the opportunity record. While this field exists on the opportunity object, it is not exposed to system users.</description>
        <formula>TEXT(Secondary_Contact__r.Contact_Method__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary Contact Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Contact_Phone_Number__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This formula field is automatically populated from the opportunity record upon project record creation</description>
        <formula>Secondary_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary Contact Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This look up field is automatically populated from the opportunity record upon project record creation.</description>
        <label>Secondary Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Residential Projects (Secondary Contact)</relationshipLabel>
        <relationshipName>Residential_Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sheet_Size_Proj__c</fullName>
        <description>Sheet Size</description>
        <inlineHelpText>Sheet Size</inlineHelpText>
        <label>Sheet Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sheet_Size__c</fullName>
        <formula>Community__r.Sheet_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sheet Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Smart_Thermostat__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This pick list field is manually populated by the EC if she/he sells a homeowner a smart thermostat along with their solar system.

This will eventually become a formula field populated from the quote record once we implement functionality in the proposal tool for ECs to sell smart thermostats to homeowners.</description>
        <label>Smart Thermostat</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Solar_Rebate_Actual__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs</description>
        <label>Solar Rebate (Actual)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Solar_Rebate_Expected__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs</description>
        <label>Solar Rebate (Expected)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This pick list value is automatically populated at record creation with a default value of &quot;Active.&quot; This is a pick list field that can be manually updated by a project team member at any point during the installation project lifecycle in order to communicate project status to the whole team and to track project status data.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Cancellation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Storage_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This lookup is used to link the project to a storage configuration so that PO Lines can be created accurately</description>
        <label>Storage Configuration</label>
        <referenceTo>Storage_Configuration__c</referenceTo>
        <relationshipLabel>Residential Projects</relationshipLabel>
        <relationshipName>Residential_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SunPower_Deal_Type__c</fullName>
        <label>SunPower Deal Type</label>
        <picklist>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>System_Adders__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs</description>
        <label>System Adders</label>
        <picklist>
            <picklistValues>
                <fullName>Not applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TPS-Ground Mount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TPS-Tile Roof Inset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TPS-Trenching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TPS-Landscape Modules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TPS-Flat Roof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TPS-Home Survey (Plot Plan)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TPS-Meter Combines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TPS-Meter Combines with more than 2 Meters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP-Main Service Panel Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP-Roof Pitch &gt; 36 Degree (9:12 Pitch)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP-Flat Roof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP-Critter Guard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP-Meter Combination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP-Line Side Tap/Downsize Main Breaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP-Concrete Tile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP-Locus Meter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP-Interconnection Application Fee. Projects &gt;10Kw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP-Revenue Grade Meter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP-Interconnection Application Fee. Projects &gt;15Kw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP-Plot Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC Sub Panel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC Disconnect at Roof(up to 3 strings)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC Disconnect at grade level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC Contactor (1 up to 2 strings)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC Contactor (2 up to 4 strings)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Split array</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3+ Story Roof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permit Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sandoff/Racking Installation</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>System_Production_Year_1__c</fullName>
        <formula>Quote__r.Total_Energy__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System Production Year 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Size__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This formula field is populated from the quote record at the time of project record creation.
This field communicates critical details about the system configuration being installed for the project.</description>
        <formula>Quote__r.Maximum_Rated_Capacity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Wattage_AC__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs</description>
        <label>System Wattage (AC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Wattage_DC__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs</description>
        <label>System Wattage (DC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Thermostat_Manufacturer__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This picklist field is manually populated by an EC if he/she sells a customer an ecobee smart thermostat. This field will eventually become a formula field populated from the quote record once we implement functionality in the proposal tool for ECs to sell smart thermostats to homeowners.</description>
        <label>Thermostat Manufacturer</label>
        <picklist>
            <picklistValues>
                <fullName>ecobee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Thermostat_Model__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This pick list field is currently hidden from system users. It will eventually become a formula field populated from the quote record once we implement functionality in the proposal tool for ECs to sell smart thermostats to homeowners.</description>
        <label>Thermostat Model</label>
        <picklist>
            <picklistValues>
                <fullName>Eco Bee3, HomeKit - Enabled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TotalSOValue__c</fullName>
        <description>Used to consolidate the total amount to be bill to the builder.</description>
        <label>Total SO Value $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Sets_Proj__c</fullName>
        <description>Total Number of Sets</description>
        <inlineHelpText>Total Number of Sets</inlineHelpText>
        <label>Total Number of Sets</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Sets__c</fullName>
        <formula>Community__r.Total_Number_of_Sets__c</formula>
        <label>Total Number of Sets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs</description>
        <label>Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trim_Labor_Pricing__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs</description>
        <label>Trim Labor Pricing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trim_Promised__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs</description>
        <label>Trim Promised</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type_of_Design__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs
Type of Design manually populated</description>
        <label>Type of Design</label>
        <picklist>
            <picklistValues>
                <fullName>Individual Plot Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual Permit Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual Plot &amp; Permit Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual Permit Package - Revised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual Plot &amp; Permit Package - Revised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual Plot Plan - Revised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master Plan - Revised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master Plan Permit Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master Plan Permit Package - Revised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other – See Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposal - Individual Plot Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposal - Individual Plot Plan - Revised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shading Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Line Diagram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Ready - Master Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Ready - Master Plan – Revised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Ready - Solar Site Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Ready - Solar Site Plan - Revised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Site Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Site Plan - Revised</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Utility_NH__c</fullName>
        <description>Residential Installation Project Management
Pat Hevrdejs
Utility pulled from the Community lookup for New Home</description>
        <formula>Community__r.Utility__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utility</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility__c</fullName>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This formula field is populated from the quote record at the time of project record creation.
This field communicates critical details about the homeowner&apos;s utility which is needed for the interconnection process.</description>
        <formula>Quote__r.Customer_Electric_Utility__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utility</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Was_house_built_before_1985__c</fullName>
        <description>Residential Installation Project Mgmt
Priti Rastogi
A TPS NJ Field</description>
        <label>Was house built before 1985? (NJ Only)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Was_house_built_before_1987__c</fullName>
        <description>Residential Installation Project Mgmt
Priti Rastogi
A TPS NY specific field</description>
        <label>Was house built before 1987? (NY Only)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Witness_Test_Date__c</fullName>
        <label>Witness Test Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Yard_Sign_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Project Name: Residential Installation Management
Requester: Priti Rastogi
This check box field is manually flagged by the Energy Consultant to indicate whether the HO has approved SunPower to install a yard sign at their home site to advertise their choice to go solar and to do it with SunPower.</description>
        <label>Yard Sign Approved</label>
        <type>Checkbox</type>
    </fields>
    <label>Residential Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>